Fixed report load issue on firefox

--- a/src/app/pages/reports/components/report-management/reports.component.scss
+++ b/src/app/pages/reports/components/report-management/reports.component.scss
@@ -47,3 +47,9 @@
   .padding{
       padding-top: 9px;
   }
+  .framezeroHeight{
+    height:0px;
+  }
+  .framewithHeight{
+    height:400px;
+  }
